# mcp-grafana-test

./: .gitignore  README.md  docker-compose.yml
docs/: example.txt  example2.json  grafana-dashboard-api.md  grafana-dashboard-snapshot-workflow.md  grafana-rendering-workflow.md  grafana-snapshot.md  project-structures.md
grafana-mcp-python/: Dockerfile  README.md  pyproject.toml
grafana-mcp-python/grafana_mcp/: __init__.py  cli.py  client.py  context.py  server.py
grafana-mcp-python/grafana_mcp/tools/: __init__.py  base.py  dashboard.py  search.py
grafana-mcp-python/test_infra/: README.md  docker-compose.yml
grafana-mcp-python/test_infra/grafana/provisioning/dashboards/: dashboard.yml
grafana-mcp-python/test_infra/grafana/provisioning/dashboards/import/: spring-boot-id-dashboard.json
grafana-mcp-python/test_infra/grafana/provisioning/dashboards/json/: spring-boot-dashboard-19004.json  spring-boot.json
grafana-mcp-python/test_infra/target-api/: Dockerfile
grafana-mcp-python/test_infra/target-api/src/main/java/com/example/targetapi/: TargetApiApplication.java
grafana-mcp-python/test_infra/target-api/src/main/java/com/example/targetapi/config/: ApiCallRunner.java
grafana-mcp-python/test_infra/target-api/src/main/java/com/example/targetapi/controller/: SlowApiController.java
grafana-mcp-server/: .gitignore  README.md  package-lock.json  package.json
grafana-mcp-server-ts/: tsconfig.json
grafana-mcp-server-ts/src/config/: swagger.ts
grafana-mcp-server/src/: index.ts
prometheus/: prometheus.yml
target-api/: build.gradle  settings.gradle
(+12 files in other folders)
